--- a/.env
+++ b/.env
@@ -1,5 +1,17 @@
 #Claro, aquí tienes un ejemplo de cómo podría estructurarse un archivo .env, que se utiliza comúnmente para almacenar variables de entorno en aplicaciones:
 # Configuración de la base de datos
+MONGO_URL="tu url de conexión acá"
+PORT=3000
+//mongodb
+mongoose.connect(process.env.MONGO_URL,
+    {
+        useNewUrlParser: true,
+        useUnifiedTopology: true
+
+    })
+    .then(() => console.log('MongoDB Conectada'))
+    .catch(err => console.log(err)
+);
 DB_HOST=mongodb.railway.internal
 DB_PORT=27017
 DB_USER=mongo
@@ -17,6 +29,7 @@ API_SECRET=tu_api_secret
 # Otros valores
 TIMEZONE=UTC
 LOG_LEVEL=debug
+app.listen(process.env.PORT, () => console.log('Server on port:'+process.env.PORT));
 
 
 #Este archivo incluye las variables de entorno típicas, como credenciales para la base de datos, configuración de servidor y claves de API. Es importante mantener este archivo privado y nunca incluirlo en tu repositorio público, ya que podría contener información sensible.
