--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 #Claro, aquí tienes un ejemplo de cómo podría estructurarse un archivo .env, que se utiliza comúnmente para almacenar variables de entorno en aplicaciones:
 # Configuración de la base de datos
-MONGO_URL="tu url de conexión acá"
+MONGO_URL="mongodb://mongo:SrKjRiEPWnqPQUUglvoSBKGvCWoEedMw@nozomi.proxy.rlwy.net:14203"
 PORT=3000
 //mongodb
 mongoose.connect(process.env.MONGO_URL,
